<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宠乐</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tab_icon_fujin">附近</string>
    <string name="tab_icon_find">发现</string>
    <string name="tab_icon_chat">聊天</string>
    <string name="tab_icon_contact">联系人</string>
    <string name="tab_icon_set">设置</string>
    <string name="tab_icon_shop">商家</string>
    
    <string name="animal_type">想看到的宠物种类</string>
	<string name="animal_sex">想看到的宠物性别</string>
	<string name="animal_growtime">出现的时间</string>
	<string name="animal_viproot">会员专有选项</string>
	<string name="select">筛选</string>
	<string name="animal_age">宠物年龄</string>
	<string name="owner_sex_select">主人性别</string>
	<string name="owner_age">主人年龄</string>
	<string name="owner_xingzuo">主人星座</string>
	<string name="quarter">15分钟</string>
	<string name="hours">1小时</string>
	<string name="day">1天</string>
	<string name="threeday">3天</string>
    <string name="total">全部</string>
    <string name="animal_boye">男</string>
    <string name="animal_gril">女</string>
    <string name="owner_boye">男</string>
    <string name="owner_gril">女</string>
    <string name="onlylookwoman">只看女</string>
    <string name="onlylookman">只看男</string>
    <string name="zidingyi">自定义</string>
    
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="login">正在登录...</string>
	<string name="loginName">账号：</string>
	<string name="loginPassword">密码：</string>
	
	<string name="photo">相片</string>
	<string name="input_content">请输入内容</string>
	<string name="send">发送</string>
	<string name="send_content">说点什么吧</string>	
	<string name="language">语言</string>
	<string name="vedio">视频</string>
	<string name="upload">上传</string>
	<string name="player">播放</string>
	<string name="update">修改</string>
	<string name="updateinfo">修改信息</string>
	<string name="addImage">添加照片</string>
	
	<string name="owner_en">Owner</string>
	<string name="owner">主人</string>
	<string name="pet_en">Pet</string>
	<string name="pet">宠物</string>
	
	<string name="look_head">查看头像</string>
	<string name="scene_photo">现场拍照</string>
	<string name="photo_choose">相册选择</string>
	
	<string name="owner_name">姓名：</string>
	<string name="owner_sex">性别：</string>
	<string name="owner_sigin">签名：</string>
	<string name="pet_age">年龄：</string>
	
	<string name="refresh_pull_label">下拉可刷新…</string>
    <string name="refresh_release_label">释放立即刷新…</string>
    <string name="refresh_refreshing_label">正在载入…</string>
    
    <string name="friend_activity">宠友动态</string>
    <string name="pet_chat_group">宠聊群组</string>
    <string name="slide_call">附近喊话</string>
    <string name="pet_club">宠聊俱乐部</string>
    <string name="pet_game">宠聊游戏</string>
    <string name="pet_activity">宠聊活动</string>
    
	
</resources>
