<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
     >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        
        <include layout="@layout/head_title"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
       	android:orientation="vertical"
       	android:layout_margin="10dp"
        >
        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="25dp"
		        android:text="@string/owner_en" />
        
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        >
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/owner_name" />
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/owner_name_editext"
		        />
		    
		</LinearLayout>
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        >
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/owner_sex" />
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/owner_sex_editext"
		        />
		    
		</LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        >
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/owner_sigin" />
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/owner_sigin_editext"
		         />
		    
		</LinearLayout>
		
		<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/pet_textview"
		        android:textColor="#000000"
		        android:textSize="25dp"
		        android:text="@string/pet_en" />
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/owner_name" />
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/pet_name_editext" />
		    
		</LinearLayout>
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/owner_sex" />
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/pet_sex_editext"/>
		    
		</LinearLayout>
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/pet_age" />
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/pet_age_editext" />
		    
		</LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        
        <Button android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/set_updateinfo_button"
            android:text="@string/updateinfo"
            />
        <Button android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/set_addImage_button"
            android:text="@string/addImage"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
    </LinearLayout>
</LinearLayout>
